[gd_scene load_steps=3 format=3 uid="uid://bopcv7ybf3pbs"]

[ext_resource type="PackedScene" path="res://addons/maaacks_game_template/base/scenes/overlaid_menu/overlaid_menu.tscn" id="1_er51o"]
[ext_resource type="Script" path="res://examples/scenes/overlaid_menus/game_won_menu.gd" id="2_4a773"]

[node name="GameWonMenu" instance=ExtResource("1_er51o")]
process_mode = 3
script = ExtResource("2_4a773")
pauses_game = true

[node name="MenuPanelContainer" parent="." index="1"]
custom_minimum_size = Vector2(432, 240)

[node name="TitleMargin" parent="MenuPanelContainer/MarginContainer/BoxContainer" index="0"]
visible = false

[node name="DescriptionMargin" parent="MenuPanelContainer/MarginContainer/BoxContainer" index="1"]
visible = true
theme_override_constants/margin_top = 64
theme_override_constants/margin_bottom = 64

[node name="DescriptionLabel" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin" index="0"]
text = "You won!"
scroll_active = false
horizontal_alignment = 1

[node name="MenuButtons" parent="MenuPanelContainer/MarginContainer/BoxContainer/MenuButtonsMargin" index="0"]
custom_minimum_size = Vector2(400, 0)
vertical = false

[node name="ExitButton" type="Button" parent="MenuPanelContainer/MarginContainer/BoxContainer/MenuButtonsMargin/MenuButtons" index="0"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Exit"

[node name="MainMenuButton" type="Button" parent="MenuPanelContainer/MarginContainer/BoxContainer/MenuButtonsMargin/MenuButtons" index="1"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Main Menu"

[node name="CloseButton" parent="MenuPanelContainer/MarginContainer/BoxContainer/MenuButtonsMargin/MenuButtons" index="2"]
size_flags_horizontal = 3
text = "Continue"

[node name="ConfirmMainMenu" type="ConfirmationDialog" parent="." index="2"]
auto_translate_mode = 1
initial_position = 2
dialog_text = "Go back to main menu?"

[node name="ConfirmExit" type="ConfirmationDialog" parent="." index="3"]
auto_translate_mode = 1
initial_position = 2
dialog_text = "Quit the game?"

[connection signal="pressed" from="MenuPanelContainer/MarginContainer/BoxContainer/MenuButtonsMargin/MenuButtons/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="MenuPanelContainer/MarginContainer/BoxContainer/MenuButtonsMargin/MenuButtons/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="confirmed" from="ConfirmMainMenu" to="." method="_on_confirm_main_menu_confirmed"]
[connection signal="confirmed" from="ConfirmExit" to="." method="_on_confirm_exit_confirmed"]
